Preserve catalog packaging format and use Android compatible replay IO